apps/harbor/others/route-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.myr-project.eu`)
      services:
        - name: harbor
          port: 80
    - match: Host(`core.harbor.myr-project.eu`)
      services:
        - name: harbor-core
          port: 80
    - match: Host(`portal.harbor.myr-project.eu`)
      services:
        - name: harbor-portal
          port: 80
  tls:
    secretName: harbor-nginx
